package grpc

import (
	"context"

	"github.com/titan-commerce/backend/gamification-service/internal/application"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/timestamppb"
)

type GamificationServer struct {
	UnimplementedGamificationServiceServer
	service *application.GamificationService
}

func NewGamificationServer(service *application.GamificationService) *GamificationServer {
	return &GamificationServer{service: service}
}

func (s *GamificationServer) Register(server *grpc.Server) {
	RegisterGamificationServiceServer(server, s)
}

func (s *GamificationServer) GetBalance(ctx context.Context, req *GetBalanceRequest) (*CoinWallet, error) {
	wallet, err := s.service.GetBalance(ctx, req.UserId)
	if err != nil {
		return nil, status.Errorf(codes.Internal, err.Error())
	}

	return &CoinWallet{
		UserId:         wallet.UserID,
		Balance:        int64(wallet.Balance),
		LifetimeEarned: int64(wallet.Lifetime),
		UpdatedAt:      timestamppb.New(wallet.UpdatedAt),
	}, nil
}

func (s *GamificationServer) EarnCoins(ctx context.Context, req *EarnCoinsRequest) (*CoinWallet, error) {
	wallet, err := s.service.EarnCoins(ctx, req.UserId, int(req.Amount), req.Source, req.Description)
	if err != nil {
		return nil, status.Errorf(codes.Internal, err.Error())
	}

	return &CoinWallet{
		UserId:         wallet.UserID,
		Balance:        int64(wallet.Balance),
		LifetimeEarned: int64(wallet.Lifetime),
		UpdatedAt:      timestamppb.New(wallet.UpdatedAt),
	}, nil
}

func (s *GamificationServer) SpendCoins(ctx context.Context, req *SpendCoinsRequest) (*SpendCoinsResponse, error) {
	wallet, err := s.service.SpendCoins(ctx, req.UserId, int(req.Amount), req.Purpose)
	if err != nil {
		return nil, status.Errorf(codes.InvalidArgument, err.Error())
	}

	return &SpendCoinsResponse{
		Success:    true,
		NewBalance: int64(wallet.Balance),
	}, nil
}

func (s *GamificationServer) DailyCheckIn(ctx context.Context, req *DailyCheckInRequest) (*DailyCheckInResponse, error) {
	reward, streak, err := s.service.DailyCheckIn(ctx, req.UserId)
	if err != nil {
		return nil, status.Errorf(codes.InvalidArgument, err.Error())
	}

	return &DailyCheckInResponse{
		Reward:      int64(reward),
		Streak:      int32(streak),
		StreakBonus: streak >= 7,
	}, nil
}

func (s *GamificationServer) GetMissions(ctx context.Context, req *GetMissionsRequest) (*GetMissionsResponse, error) {
	missions, userMissions, err := s.service.GetMissions(ctx, req.UserId)
	if err != nil {
		return nil, status.Errorf(codes.Internal, err.Error())
	}

	pbMissions := make([]*Mission, len(missions))
	for i, m := range missions {
		pbMissions[i] = &Mission{
			Id:          m.ID,
			Name:        m.Name,
			Description: m.Description,
			Type:        m.Type,
			Target:      int32(m.Target),
			Reward:      int64(m.Reward),
		}
	}

	pbUserMissions := make([]*UserMission, len(userMissions))
	for i, um := range userMissions {
		pbUserMissions[i] = &UserMission{
			MissionId: um.MissionID,
			UserId:    um.UserID,
			Progress:  int32(um.Progress),
			Completed: um.Completed,
			Claimed:   um.ClaimedAt != nil,
		}
	}

	return &GetMissionsResponse{
		Missions:     pbMissions,
		UserMissions: pbUserMissions,
	}, nil
}

func (s *GamificationServer) UpdateMissionProgress(ctx context.Context, req *UpdateMissionProgressRequest) (*UserMission, error) {
	um, err := s.service.UpdateMissionProgress(ctx, req.UserId, req.MissionId, int(req.Increment))
	if err != nil {
		return nil, status.Errorf(codes.Internal, err.Error())
	}

	return &UserMission{
		MissionId: um.MissionID,
		UserId:    um.UserID,
		Progress:  int32(um.Progress),
		Completed: um.Completed,
		Claimed:   um.ClaimedAt != nil,
	}, nil
}

func (s *GamificationServer) ClaimMissionReward(ctx context.Context, req *ClaimMissionRewardRequest) (*ClaimRewardResponse, error) {
	reward, err := s.service.ClaimMissionReward(ctx, req.UserId, req.MissionId)
	if err != nil {
		return nil, status.Errorf(codes.InvalidArgument, err.Error())
	}

	return &ClaimRewardResponse{
		Success:      true,
		CoinsAwarded: int64(reward),
	}, nil
}

func (s *GamificationServer) SpinLuckyDraw(ctx context.Context, req *SpinLuckyDrawRequest) (*LuckyDrawResult, error) {
	result, err := s.service.SpinLuckyDraw(ctx, req.UserId, int(req.SpinCost))
	if err != nil {
		return nil, status.Errorf(codes.InvalidArgument, err.Error())
	}

	return &LuckyDrawResult{
		PrizeId:   result.PrizeID,
		PrizeName: result.Prize.Name,
		PrizeType: result.Prize.Type,
		Value:     int64(result.Prize.Value),
		IsJackpot: result.Prize.Value >= 1000,
	}, nil
}

// Placeholder types and registration (would be generated by protoc)
type UnimplementedGamificationServiceServer struct{}

func (UnimplementedGamificationServiceServer) GetBalance(context.Context, *GetBalanceRequest) (*CoinWallet, error) {
	return nil, status.Errorf(codes.Unimplemented, "unimplemented")
}
func (UnimplementedGamificationServiceServer) EarnCoins(context.Context, *EarnCoinsRequest) (*CoinWallet, error) {
	return nil, status.Errorf(codes.Unimplemented, "unimplemented")
}
func (UnimplementedGamificationServiceServer) SpendCoins(context.Context, *SpendCoinsRequest) (*SpendCoinsResponse, error) {
	return nil, status.Errorf(codes.Unimplemented, "unimplemented")
}
func (UnimplementedGamificationServiceServer) DailyCheckIn(context.Context, *DailyCheckInRequest) (*DailyCheckInResponse, error) {
	return nil, status.Errorf(codes.Unimplemented, "unimplemented")
}
func (UnimplementedGamificationServiceServer) GetMissions(context.Context, *GetMissionsRequest) (*GetMissionsResponse, error) {
	return nil, status.Errorf(codes.Unimplemented, "unimplemented")
}
func (UnimplementedGamificationServiceServer) UpdateMissionProgress(context.Context, *UpdateMissionProgressRequest) (*UserMission, error) {
	return nil, status.Errorf(codes.Unimplemented, "unimplemented")
}
func (UnimplementedGamificationServiceServer) ClaimMissionReward(context.Context, *ClaimMissionRewardRequest) (*ClaimRewardResponse, error) {
	return nil, status.Errorf(codes.Unimplemented, "unimplemented")
}
func (UnimplementedGamificationServiceServer) SpinLuckyDraw(context.Context, *SpinLuckyDrawRequest) (*LuckyDrawResult, error) {
	return nil, status.Errorf(codes.Unimplemented, "unimplemented")
}
func (UnimplementedGamificationServiceServer) mustEmbedUnimplementedGamificationServiceServer() {}

func RegisterGamificationServiceServer(s *grpc.Server, srv GamificationServiceServer) {}

type GamificationServiceServer interface {
	GetBalance(context.Context, *GetBalanceRequest) (*CoinWallet, error)
	EarnCoins(context.Context, *EarnCoinsRequest) (*CoinWallet, error)
	SpendCoins(context.Context, *SpendCoinsRequest) (*SpendCoinsResponse, error)
	DailyCheckIn(context.Context, *DailyCheckInRequest) (*DailyCheckInResponse, error)
	GetMissions(context.Context, *GetMissionsRequest) (*GetMissionsResponse, error)
	UpdateMissionProgress(context.Context, *UpdateMissionProgressRequest) (*UserMission, error)
	ClaimMissionReward(context.Context, *ClaimMissionRewardRequest) (*ClaimRewardResponse, error)
	SpinLuckyDraw(context.Context, *SpinLuckyDrawRequest) (*LuckyDrawResult, error)
	mustEmbedUnimplementedGamificationServiceServer()
}

// Message types
type GetBalanceRequest struct{ UserId string }
type CoinWallet struct {
	UserId         string
	Balance        int64
	LifetimeEarned int64
	UpdatedAt      *timestamppb.Timestamp
}
type EarnCoinsRequest struct {
	UserId      string
	Amount      int64
	Source      string
	ReferenceId string
	Description string
}
type SpendCoinsRequest struct {
	UserId  string
	Amount  int64
	Purpose string
}
type SpendCoinsResponse struct {
	Success    bool
	NewBalance int64
}
type DailyCheckInRequest struct{ UserId string }
type DailyCheckInResponse struct {
	Reward      int64
	Streak      int32
	StreakBonus bool
	NextCheckIn *timestamppb.Timestamp
}
type GetMissionsRequest struct{ UserId string }
type GetMissionsResponse struct {
	Missions     []*Mission
	UserMissions []*UserMission
}
type Mission struct {
	Id          string
	Name        string
	Description string
	Type        string
	Target      int32
	Reward      int64
	ExpiresAt   *timestamppb.Timestamp
}
type UserMission struct {
	MissionId string
	UserId    string
	Progress  int32
	Completed bool
	Claimed   bool
}
type UpdateMissionProgressRequest struct {
	UserId    string
	MissionId string
	Increment int32
}
type ClaimMissionRewardRequest struct {
	UserId    string
	MissionId string
}
type ClaimRewardResponse struct {
	Success      bool
	CoinsAwarded int64
}
type SpinLuckyDrawRequest struct {
	UserId   string
	SpinCost int64
}
type LuckyDrawResult struct {
	PrizeId   string
	PrizeName string
	PrizeType string
	Value     int64
	IsJackpot bool
}
